# stick_bot

stick_bot/: CMakeLists.txt  package.xml
stick_bot/launch/: stick_bot.launch  stick_bot_teleop.launch
stick_bot_arm/: CMakeLists.txt  package.xml
stick_bot_arm/config/xbox_one/: arm_teleop.yaml  gripper_teleop.yaml  joystick.yaml  turret_teleop.yaml
stick_bot_arm/gains/arm/: arm_2d.xml
stick_bot_arm/gains/turret/: x8_16.xml
stick_bot_arm/launch/: arm.launch  gripper.launch  joystick.launch  turret.launch
stick_bot_arm/src/: hebi_arm.cpp  hebi_gripper.cpp  hebi_turret.cpp
stick_bot_sensors/: CMakeLists.txt  package.xml
stick_bot_sensors/launch/: rplidar.launch
stick_bot_slam/: CMakeLists.txt  package.xml
stick_bot_slam/config/: stick_bot_2d.lua
stick_bot_slam/launch/: google_cartographer_2d.launch
stickbot_generated_launch/: CMakeLists.txt  package.xml
stickbot_generated_launch/launch/: load_urdf_onto_ros_param_server.launch  spawn_urdf_in_gazebo.launch  start_gazebo.launch
stickbot_generated_urdf/: CMakeLists.txt  package.xml
stickbot_generated_urdf/meshes/: a_2038_02_17z_prt.stl  a_2039_02_9z_prt.stl  a_2043_01_prt.stl  a_2074_01_13z_prt.stl  a_2089_01_14z_prt.stl  a_2089_01_6z_prt.stl  a_2119_01_15z_prt.stl  gripper_core_prt.stl  hebi_x5_9_10z_prt.stl  hebi_x8_16_12z_prt.stl  hebi_x8_16_16z_prt.stl  hebi_x8_16_1z_prt.stl  hebi_x8_16_20z_prt.stl  hebi_x8_16_2z_prt.stl  hebi_x8_16_3z_prt.stl  pm_2155_01_prt.stl  pm_2221_01_2_prt.stl  pm_2371_01_1_asm.stl  pp_2074_08_prt.stl  pp_2084_01_prt.stl  rplidar_a2_asm.stl  tubepar_18z_prt.stl  tubepar_19z_prt.stl  tubepar_4z_prt.stl
stickbot_generated_urdf/urdf/: stickbot.urdf
